# agi_house_gemini_3_hackathon_12132025

./: .gitignore  README.md  TEST_14_1_VALIDATION.md  cleanup_stale_tests.py  diagnose_and_fix.py  extract_and_test.py  fix_and_test.py  pyproject.toml  recover_and_test.py  test_gemini_api.py  test_parser.py  test_wrapper.py
Documentation/: design_assessment.md  development_plan_sprint_1.mdx
coding_agent/: __init__.py  agent.py  base.py  cleanup.py  config.py  error_queue.py  llms.py  prompts.py  reloader.py  test_runner.py
notebooks/: demo.ipynb
notebooks/time_parser/parsers/: business_day_durations.py  business_day_ranges.py  general_relative_dates.py  relative_date_offsets.py  relative_dates.py  relative_time_expressions.py  specific_deadline_times.py  specific_deadline_with_time.py  specific_deadlines.py  specific_time_deadlines.py  weekday_expressions.py  weekday_time_expressions.py
notebooks/time_parser/tests/: test_business_day_durations.py  test_business_day_ranges.py  test_business_days_range.py  test_general_relative_dates.py  test_relative_date_offsets.py  (+11 more)
tests/fixtures/: follow_up_tasks_202512121435.jsonl
time_parser/: __init__.py  parser.py  wrapper.py
time_parser/parsers/: __init__.py  business_day_ranges.py  relative_dates.py  relative_time_offsets.py  weekday_scheduling.py
time_parser/tests/: __init__.py  conftest.py  test_business_day_ranges.py  test_relative_dates.py  test_utils.py  test_weekday_scheduling.py
utils/: __init__.py  dynamic_loading.py  json_helpers.py  llm_helpers.py  llm_json_parser.py  llm_output_parsing_util.py
(+3 files in other folders)
